2006-08-02  Mike Kelly  <pioto@pioto.org>

	* doc/API.txt: Clean up the API spec some more.

2006-08-01  Mike Kelly  <pioto@pioto.org>

	* (Everything): Begin a big 'ol rewrite of stuff, putting most code
	inside functions. This allows for variables to be kept out of the
	global scope, and also allows for easy, automatic syntax checks. Added
	some basic tests to Makefiles.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* bash/add.bash.in, bash/install_fail.bash.in: We shouldn't fail if
	ENEWUSERS or ENEWGROUPS are empty.

	* Makefile.am: Put a .keep file in the dbdirs, so they always exist
	properly.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.1

	* Makefile.am: Add doc to EXTRA_DIST, so we actually distribute our
	documentation.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	+ Release: 0.3.0

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* (Everything): Switch everything to explicitly use bash. Rename all
	scripts from .sh to .bash, use #!/bin/bash, etc.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Fix some load_config lines, remove an
	unnecessary one.

2006-07-31  Mike Kelly  <pioto@pioto.org>

	* -API, doc/API.txt, doc/Makefile: RST-ize the API specifications.
	Provide a Makefile for them.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* bash/delgroup.sh.in, bash/deluser.sh.in,
	bash/auth/{compat,files}-{GNU-glibc,BSD-FreeBSD}-{user,group}del.sh,
	bash/install_fail.sh.in, eselect/users.eselect.in: Add new user and
	group deletion scripts, which are called by the eselect script, and by
	the install_fail.sh.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: More improvements from Kugelfang and
	ciaranm on IRC.

2006-07-30  Mike Kelly  <pioto@pioto.org>

	* eselect/users.eselect.in: Improve the eselect module, per advice from
	Kugelfang. Should now respect ROOT and have better style.

2006-07-29  Mike Kelly  <pioto@pioto.org>

	* bash/db.sh.in: Fix a typo, line 21,22 (missing \).
